--- a/praca_przejsciowa.ioc
+++ b/praca_przejsciowa.ioc
@@ -1,7 +1,9 @@
 #MicroXplorer Configuration settings - do not modify
 Dma.Request0=USART2_RX
 Dma.Request1=USART2_TX
-Dma.RequestsNb=2
+Dma.Request2=USART3_RX
+Dma.Request3=USART3_TX
+Dma.RequestsNb=4
 Dma.USART2_RX.0.Direction=DMA_PERIPH_TO_MEMORY
 Dma.USART2_RX.0.Instance=DMA1_Channel6
 Dma.USART2_RX.0.MemDataAlignment=DMA_MDATAALIGN_BYTE
@@ -20,6 +22,24 @@ Dma.USART2_TX.1.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
 Dma.USART2_TX.1.PeriphInc=DMA_PINC_DISABLE
 Dma.USART2_TX.1.Priority=DMA_PRIORITY_LOW
 Dma.USART2_TX.1.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority
+Dma.USART3_RX.2.Direction=DMA_PERIPH_TO_MEMORY
+Dma.USART3_RX.2.Instance=DMA1_Channel3
+Dma.USART3_RX.2.MemDataAlignment=DMA_MDATAALIGN_BYTE
+Dma.USART3_RX.2.MemInc=DMA_MINC_ENABLE
+Dma.USART3_RX.2.Mode=DMA_NORMAL
+Dma.USART3_RX.2.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
+Dma.USART3_RX.2.PeriphInc=DMA_PINC_DISABLE
+Dma.USART3_RX.2.Priority=DMA_PRIORITY_LOW
+Dma.USART3_RX.2.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority
+Dma.USART3_TX.3.Direction=DMA_MEMORY_TO_PERIPH
+Dma.USART3_TX.3.Instance=DMA1_Channel2
+Dma.USART3_TX.3.MemDataAlignment=DMA_MDATAALIGN_BYTE
+Dma.USART3_TX.3.MemInc=DMA_MINC_ENABLE
+Dma.USART3_TX.3.Mode=DMA_NORMAL
+Dma.USART3_TX.3.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
+Dma.USART3_TX.3.PeriphInc=DMA_PINC_DISABLE
+Dma.USART3_TX.3.Priority=DMA_PRIORITY_LOW
+Dma.USART3_TX.3.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority
 File.Version=6
 GPIO.groupedBy=Group By Peripherals
 KeepUserPlacement=false
@@ -31,33 +51,37 @@ Mcu.IP3=SYS
 Mcu.IP4=TIM1
 Mcu.IP5=TIM2
 Mcu.IP6=USART2
-Mcu.IPNb=7
+Mcu.IP7=USART3
+Mcu.IPNb=8
 Mcu.Name=STM32F103R(8-B)Tx
 Mcu.Package=LQFP64
 Mcu.Pin0=PC13-TAMPER-RTC
 Mcu.Pin1=PC14-OSC32_IN
-Mcu.Pin10=PA14
-Mcu.Pin11=PB3
-Mcu.Pin12=PB4
-Mcu.Pin13=PB5
-Mcu.Pin14=VP_SYS_VS_Systick
-Mcu.Pin15=VP_TIM1_VS_ClockSourceINT
-Mcu.Pin16=VP_TIM2_VS_ClockSourceINT
+Mcu.Pin10=PC10
+Mcu.Pin11=PC11
+Mcu.Pin12=PB3
+Mcu.Pin13=PB4
+Mcu.Pin14=PB5
+Mcu.Pin15=VP_SYS_VS_Systick
+Mcu.Pin16=VP_TIM1_VS_ClockSourceINT
+Mcu.Pin17=VP_TIM2_VS_ClockSourceINT
 Mcu.Pin2=PC15-OSC32_OUT
 Mcu.Pin3=PD0-OSC_IN
 Mcu.Pin4=PD1-OSC_OUT
 Mcu.Pin5=PA2
 Mcu.Pin6=PA3
 Mcu.Pin7=PA5
-Mcu.Pin8=PA8
-Mcu.Pin9=PA13
-Mcu.PinsNb=17
+Mcu.Pin8=PA13
+Mcu.Pin9=PA14
+Mcu.PinsNb=18
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F103RBTx
 MxCube.Version=6.0.0
 MxDb.Version=DB.6.0.0
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:true\:false
+NVIC.DMA1_Channel2_IRQn=true\:0\:0\:false\:false\:true\:false\:true
+NVIC.DMA1_Channel3_IRQn=true\:0\:0\:false\:false\:true\:false\:true
 NVIC.DMA1_Channel6_IRQn=true\:0\:0\:false\:false\:true\:false\:true
 NVIC.DMA1_Channel7_IRQn=true\:0\:0\:false\:false\:true\:false\:true
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:true\:false
@@ -76,6 +100,7 @@ NVIC.TIM1_TRG_COM_IRQn=true\:0\:0\:false\:false\:true\:true\:true
 NVIC.TIM1_UP_IRQn=true\:0\:0\:false\:false\:true\:true\:true
 NVIC.TIM2_IRQn=true\:0\:0\:false\:false\:true\:true\:true
 NVIC.USART2_IRQn=true\:0\:0\:false\:false\:true\:true\:true
+NVIC.USART3_IRQn=true\:0\:0\:false\:false\:true\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:true\:false
 PA13.GPIOParameters=GPIO_Label
 PA13.GPIO_Label=TMS
@@ -110,14 +135,10 @@ PA5.GPIO_PuPd=GPIO_NOPULL
 PA5.GPIO_Speed=GPIO_SPEED_FREQ_LOW
 PA5.Locked=true
 PA5.Signal=GPIO_Output
-PA8.GPIOParameters=GPIO_Label
-PA8.GPIO_Label=Pompka
-PA8.Locked=true
-PA8.Signal=GPIO_Output
 PB3.GPIOParameters=GPIO_Label
-PB3.GPIO_Label=SWO
+PB3.GPIO_Label=Pompka
 PB3.Locked=true
-PB3.Signal=SYS_JTDO-TRACESWO
+PB3.Signal=GPIO_Output
 PB4.GPIOParameters=GPIO_Label
 PB4.GPIO_Label=Grzalka
 PB4.Locked=true
@@ -126,6 +147,12 @@ PB5.GPIOParameters=GPIO_Label
 PB5.GPIO_Label=DS18B20
 PB5.Locked=true
 PB5.Signal=GPIO_Output
+PC10.Locked=true
+PC10.Mode=Asynchronous
+PC10.Signal=USART3_TX
+PC11.Locked=true
+PC11.Mode=Asynchronous
+PC11.Signal=USART3_RX
 PC13-TAMPER-RTC.GPIOParameters=GPIO_PuPd,GPIO_Label
 PC13-TAMPER-RTC.GPIO_Label=B1 [Blue PushButton]
 PC13-TAMPER-RTC.GPIO_PuPd=GPIO_NOPULL
@@ -171,7 +198,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=STM32CubeIDE
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-MX_DMA_Init-DMA-false-HAL-true,3-SystemClock_Config-RCC-false-HAL-false,4-MX_USART2_UART_Init-USART2-false-HAL-true,5-MX_TIM1_Init-TIM1-false-HAL-true,6-MX_TIM2_Init-TIM2-false-HAL-true
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-MX_DMA_Init-DMA-false-HAL-true,3-SystemClock_Config-RCC-false-HAL-false,4-MX_USART2_UART_Init-USART2-false-HAL-true,5-MX_TIM1_Init-TIM1-false-HAL-true,6-MX_TIM2_Init-TIM2-false-HAL-true,7-MX_USART3_UART_Init-USART3-false-HAL-true
 RCC.ADCFreqValue=32000000
 RCC.AHBFreq_Value=64000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV2
@@ -202,8 +229,14 @@ TIM1.Prescaler=999
 TIM2.IPParameters=Prescaler,Period
 TIM2.Period=999
 TIM2.Prescaler=63
-USART2.IPParameters=VirtualMode
+USART2.BaudRate=115200
+USART2.IPParameters=VirtualMode,BaudRate,WordLength
 USART2.VirtualMode=VM_ASYNC
+USART2.WordLength=WORDLENGTH_9B
+USART3.BaudRate=9600
+USART3.IPParameters=VirtualMode,BaudRate,WordLength
+USART3.VirtualMode=VM_ASYNC
+USART3.WordLength=WORDLENGTH_9B
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
 VP_TIM1_VS_ClockSourceINT.Mode=Internal
@@ -212,3 +245,4 @@ VP_TIM2_VS_ClockSourceINT.Mode=Internal
 VP_TIM2_VS_ClockSourceINT.Signal=TIM2_VS_ClockSourceINT
 board=NUCLEO-F103RB
 boardIOC=true
+isbadioc=false
